--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,10 +12,10 @@ compatibility_date = "2023-12-01"
 # binding = "MY_BUCKET"
 # bucket_name = "my-bucket"
 
-# [[d1_databases]]
-# binding = "DB"
-# database_name = "my-database"
-# database_id = ""
+[[d1_databases]]
+binding = "DB" # i.e. available in your Worker on env.DB
+database_name = "moto-library-db"
+database_id = "60dbf3f1-3095-4e9c-8663-21f0c1de0bdf"
 
 # [ai]
 # binding = "AI"
